# markitdown_poc

./: .gitignore  main.py  mdapp.ipynb  pyproject.toml
docs/superpowers/plans/: 2026-06-23-quality-gate.md
docs/superpowers/specs/: 2026-06-23-quality-gate-design.md
quality_gate/: __init__.py  gate.py  heuristics.py  llm_judge.py  pipeline.py
tests/: test_gate.py  test_heuristics.py  test_llm_judge.py  test_pipeline.py
